# my-poster-bot2

./: .pdm.toml  pyproject.toml
src/: __main__.py  config.py  events.py  handlers.py  loader.py
src/groof/: __init__.py  bot.py  database.py  dispatcher.py  handler.py  types.py
