[project]
name = ""
version = ""
description = ""
authors = [
    {name = "levch", email = "levchenko.d.a1998@gmail.com"},
]
dependencies = [
    "envparse>=0.2.0",
    "requests>=2.28.1",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
